refactor | sonar qube issues